[gd_scene load_steps=5 format=3 uid="uid://dihoti1hrgw6e"]

[ext_resource type="Script" uid="uid://daghifr6k04f" path="res://scripts/stop_point.gd" id="1_ce4fe"]
[ext_resource type="Texture2D" uid="uid://cnxym31p48375" path="res://assets/sprites/fruit.png" id="2_i03o5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhoxb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ce4fe"]
radius = 29.0172

[node name="StopPoint" type="Node2D"]
script = ExtResource("1_ce4fe")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_i03o5")
hframes = 4
vframes = 4
frame = 4

[node name="FixArea" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="FixArea"]
shape = SubResource("RectangleShape2D_lhoxb")

[node name="StopArea" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="StopArea"]
shape = SubResource("CircleShape2D_ce4fe")
debug_color = Color(0, 0.643963, 0.290161, 0.42)

[connection signal="body_entered" from="FixArea" to="." method="_on_fix_area_body_entered"]
[connection signal="body_exited" from="FixArea" to="." method="_on_fix_area_body_exited"]
[connection signal="body_entered" from="StopArea" to="." method="_on_stop_area_body_entered"]
[connection signal="body_exited" from="StopArea" to="." method="_on_stop_area_body_exited"]
